--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div style="margin-top: 60px;">
  <div class="empty-wishlist d-flex justify-content-center align-items-center flex-column">
      <img src="https://www.scholarswing.in/resources/images/empty-cart.png" alt="">
