--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -27,12 +27,16 @@
                   <button class="btn btn-outline-light"><i class="fa-solid fa-cart-shopping me-2"></i>cart<span class="badge bg-secondary ms-2">5</span></button>
               </a>
             </li>
-            <li>
+            <li *ngIf="!loginUsername">
               <a class="nav-link active"routerLink="user/login">
                   <button class="btn btn-outline-light"><i class="fa-solid fa-user me-2"></i>login</button>
               </a>
             </li>
-           
+            <li *ngIf="loginUsername">
+              <a class="nav-link active">
+                  <button class="btn btn-outline-light" (click)="logout()"><i class="fa-solid fa-power-off me-2"></i>{{loginUsername}}</button>
+              </a>
+            </li>
           </ul>
           
          </div>
