--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,12 +18,12 @@
      
           <ul class="navbar-nav  mb-2 mb-lg-0">
             <li>
-              <a class="nav-link active" routerLink="user/wishlist">
-                  <button class="btn btn-outline-light"><i class="fa-solid fa-heart fa-beat me-2"></i>wishlist<span class="badge bg-secondary ms-2">6</span></button>
+              <a class="nav-link active" routerLink="/user/wishlist">
+                  <button class="btn btn-outline-light"><i class="fa-solid fa-heart fa-beat me-2"></i>wishlist<span class="badge bg-secondary ms-2">{{wishlistCount}}</span></button>
               </a>
             </li>
             <li>
-              <a class="nav-link active"routerLink="user/cart">
+              <a class="nav-link active"routerLink="/user/cart">
                   <button class="btn btn-outline-light"><i class="fa-solid fa-cart-shopping me-2"></i>cart<span class="badge bg-secondary ms-2">5</span></button>
               </a>
             </li>
