--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -25,7 +25,7 @@
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                     <div class="d-flex justify-content-between">
                         <button class="btn btn-outline-danger " (click)="removeItem(Product._id)"><i class="fa-solid fa-trash"></i></button>
-                        <button class="btn btn-outline-success "><i class="fa-solid fa-cart-shopping"></i></button>
+                        <button class="btn btn-outline-success " (click)="addToCart(Product)"><i class="fa-solid fa-cart-shopping"></i></button>
                     </div>
                 </div>
             </div>
