--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -28,23 +28,27 @@
                     <td ><img [src]="product.image" alt="" width="100px" height="100px"></td>
                     <td >
                         <div class="d-flex">
-                            <button class="btn fw-bolder fs-3">-</button>
+                            <button (click)="decrementCart(product._id)" class="btn fw-bolder fs-3">-</button>
                             <input type="num" class="form-control text-center" [value]="product.quantity" style="max-width: 3rem;" readonly>
-                            <button class="btn fw-bolder fs-4">+</button>
+                            <button (click)="incrementCart(product._id)"  class="btn fw-bolder fs-4">+</button>
                         </div>
                     </td>
                     <td >
                         ${{product.grandTotal}}
                     </td>
-                    <td ><button class="btn btn-outline-danger"><i class="fa-solid fa-trash"></i></button></td>
+                    <td ><button class="btn btn-outline-danger" (click)="removeItem(product._id)"><i class="fa-solid fa-trash"></i></button></td>
                 </tr>
                </tbody>
             </table>
+            <div class="d-flex justify-content-center">
+                <button class="btn btn-outline-danger" (click)="emptyCart()">Empty cart</button>
+                <button class="btn btn-outline-success ms-3">Add more Items</button>
+            </div>
         </div>
         <div class="col-md-3 d-flex justify-content-center align-items-center">
             <div class="border shadow rounded p-4">
               <h3>Grand Total:<span class="text-primary"> $ {{cartTotal}}</span> </h3>
-              <button class="btn btn-success mt-3" routerLink="/user/checkout">CheckOut</button>
+              <button class="btn btn-success mt-3" (click)="checkout()">CheckOut</button>
             </div>
         </div>
         <div class="col-md-1"></div>
