--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -6,8 +6,8 @@
         <div class="col-md-6 d-flex justify-content-center">
             <img src="https://img.freepik.com/premium-vector/express-delivery-social-media-post-scooter-delivery-way-food-home-delivery-ads_608547-172.jpg" alt="img" width="80%" height="450px">
         </div>
-        <div class="col-md-5 rounded border shadow p-5 mt-3">
-            <form *ngIf="!proceedToStatus" [formGroup]="checkoutForm" (ngSubmit)="proceedToBuy()">
+        <div class="col-md-5">
+            <form class="rounded border shadow p-5 mt-3" *ngIf="!proceedToStatus" [formGroup]="checkoutForm" (ngSubmit)="proceedToBuy()">
                 <div class="form-floating mb-3">
                     <input type="text" class="form-control" id="floatingInput" placeholder="uname" name="uname" formControlName="uname">
                     <label for="floatingInput">Username</label>
@@ -28,9 +28,10 @@
                     <button class="btn btn-warning" (click)="cancel()">Cancel</button>
                     <button class="btn btn-success" type="submit">Proceed to pay</button>
                   </div>
+
               </form>
 
-              <div *ngIf="proceedToStatus">
+              <div *ngIf="proceedToStatus" class="rounded border shadow p-5 mt-3">
                 <div class="border p-3">
                     <h4 class="text-center mb-3">---Conform the delivery address---</h4>
                     <h5 class="text-secondary">Address : <span class="text-primary">{{checkoutForm.value.uname}}</span></h5>
@@ -41,9 +42,12 @@
                     <h5 class="text-secondary">Pincode : <span class="text-primary">{{checkoutForm.value.pincode}}</span></h5>
                     <h5 class="text-secondary mt-3">Total Amount : <span class="text-danger">$ {{totalAmount}}</span></h5>
                 </div>
-                 <div class="d-flex justify-content-between mt-5">
+                 <div *ngIf="!proceedToPaymentStatus" class="d-flex justify-content-between mt-5">
                     <button class="btn btn-warning" (click)="back()">back</button>
-                    <button class="btn btn-success" type="submit">Make the payment</button>
+                    <button class="btn btn-success" (click)="makePayment()">Make the payment</button>
+                 </div>
+                 <div *ngIf="proceedToPaymentStatus" class="mt-3 paypal p-5">
+                  <ngx-paypal [config]="payPalConfig"></ngx-paypal>
                  </div>
               </div>
         </div>
